[package]
name = "vorbis_decoder"
version = "0.1.0"
authors = ["Steve Heindel <stevenheindel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.0.0"
crc-any = "2.3.5"
deku = "0.11.0"
thiserror = "1.0.30"
